Changelog for Percona Toolkit

v3.0.9 

 * Feature     PT-1509 : Only set binlog_format when necessary (Thanks Moritz Lenz)

v3.0.8 released 2018-03-13

 * Feature     PT-1500 : add --secure-slowlog option to pt-query digest

v3.0.7 released 2018-03-01

 * Fixed Bug    PT-244 : pt-online-schema-change --data-dir option broken for partitioned table
 * Feature      PT-633 : Added --mysql-only option to pt-stalk for RDS
 * Fixed bug    PT-1256: pt-table-sync does not use the character set for the table it is synchronizing
 * Fixed bug    PT-1455: pt-osc is stuck when the table that is being altered is filtered out in the slave
 * Fixed bug    PT-1485: pt-mysql-summary has broken Security section in versions bigger then 5.6
 * Fixed bug   PMM-1905: Explain fails if encounters negative "ntoreturn"

v3.0.6 released 2017-12-20

 * Fixed bug     PT-234: Genaral log parser cannot handle timestamps with tz
 * Fixed bug     PT-229: pt-online-schema-change does not retry on deadlock error when using percona 5.7
 * Fixed bug     PT-225: pt-table-checksum ignores generated cols
 * Improvement   PT-221: pt-table-sync pt-table-sync support for MyRocks
 * Improvement   PT-218: pt-stalk checks RocksDB status
 * Improvement   PT-214: Added RocksDB section to pt-mysql-summary
 * Improvement   PT-205: pt-osc show message if trying to set engine to rocksdb and binlog_format != row
 * Improvement   PT-204: Make pt-table-checksum to skip RocksDB tables

v3.0.5 released 2017-11-20

 * Improvement PMM-1590: Improve MongoDB Profiler for PMM and PT
 * Improvement   PT-216: mongodb-query digest improved support for v<3.2 fixed incorrect output (Thanks MATSUU Takuto) 
 * Fixed bug     PT-211: pt-mext fails on Rsa_public_key line
 * Fixed bug     PT-212: pt-mongodb-query-digest shows NaNs
 * Fixed bug     PT-202: pt-online-schema-change fails with virtual columns
 * Fixed bug     PT-200: Index with keyword 'unique' as prefix/suffix considered as unique